--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <link rel = "stylesheet" href="style.css">
 </head>
 <body>
+
+    <header id="header-bar" class="header-nobg">
+        <nav>
+            <a href="#about-me">About Me</a>
+            <a href="#education">Education</a>
+            <a href="#future">Future</a>
+        </nav>
+    </header>
+
     <div id="landing" class="full-page">
+        <h1 id="landing-page">Mr Biscuits</h1>
+        <img src="mrb.png" alt="Mr Biscuits is feeling blue">
     </div>
+
+    <section class="panels" id="about-me">
+        <h2>About Me</h2>
+        <p>
+            <span>I like Dreamies</span>
+            <span>I also like napping</span>
+            <span>I'm asleep right now</span>
+        </p>
+    </section>
+
+    <section class="panels" id="education">
+        <h2>Education</h2>
+        <p>
+            <span>I have learned how to catch mice</span>
+        </p>
+    </section>
+
+    <section class="panels" id="future">
+        <h2>Future Me</h2>
+        <p>
+            <span>Hoping it stops raining soon</span>
+            <img src="mrbold.png" alt="Mr Biscuits is feeling blue">
+        </p>
+    </section>
 </body>
 </html>
